--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -2,26 +2,16 @@
 # Default home page with boxes providing collection stats
 layout: page
 ---
-<div class="row">
+<div class="row justify-content-center">
 
-  <div class="col-md-8">
+  <div class="col-sm-12 col-lg-8">
 
     {% include index/description.html %}
     {% include index/carousel.html title="Sample Items" %}
     
   </div>
-  <div class="col-md-4">  
 
-    {% include index/time.html %}
-
-    {% include index/featured-terms.html field="subject" title="Top Subjects" btn-color="primary" %}
-
-    {% include index/featured-terms.html field="location" title="Locations" btn-color="outline-secondary" %}
-    
-    {% include index/objects.html %}
-
-  </div>
-  <div class="col-md-12">
+  <div class="col-sm-12 col-lg-8">
 
     {% include index/data-download.html %}
 
