switch to alternative look using bootswatch lux

--- a/_layouts/data.html
+++ b/_layouts/data.html
@@ -8,7 +8,7 @@ custom-foot: js/table-js.html
 
 {{ content }}
 
-<div class="table-responsive-md">
+<div class="table-responsive">
     <table id="item-table" class="table table-striped">
         <thead>
             <tr>
