--- a/_includes/feature/jumbotron.html
+++ b/_includes/feature/jumbotron.html
@@ -54,9 +54,9 @@
 <div class="jumbotron feature px-0 border" id="{{ jumbo_div_id }}">
     <div class="jumbo-title-box">
         {% unless include.heading == false and include.text == false %}
-        <div class="p-2 text-center text-white bg-dark bg-opacity-75">
-            {% unless include.heading == false %}<{{ include.heading_level | default: 'h2' | strip }} class="display-4">{{ include.heading | default: site.title }}</{{ include.heading_level | default: 'h2' | strip }}>{% endunless %}
-            {% unless include.text == false %}<p class="jumbo-tagline">{{ include.text | default: site.tagline }}</p>{% endunless %}
+        <div class="p-2 text-center text-light bg-primary bg-opacity-75">
+            {% unless include.heading == false %}<{{ include.heading_level | default: 'h2' | strip }} class="display-4 text-light">{{ include.heading | default: site.title }}</{{ include.heading_level | default: 'h2' | strip }}>{% endunless %}
+            {% unless include.text == false %}<p class="jumbo-tagline text-light">{{ include.text | default: site.tagline }}</p>{% endunless %}
         </div>
         {% endunless %}
     </div>
