--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="h-100">
+<html lang="en" class="h-100" data-bs-theme="dark">
   <head prefix="og: http://ogp.me/ns#">
     {% include head/head.html %}
   </head>
