--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -3,6 +3,7 @@
     This allows you to override any CollectionBuilder or Bootstrap CSS without modifying the base theme files directly.
 */
 
+/*
 $primary: #000000;
 $secondary: #f0f1f2;
 $success: #4bbf73;
@@ -13,10 +14,6 @@ $light: #f0f1f2;
 $dark: #343a40;
 
 $secondary-active: #cdcecf;
-
-.navbar {
-    padding: 0.5rem;
-}
 
 .dropdown-menu {
     color: $primary;
@@ -33,4 +30,10 @@ $secondary-active: #cdcecf;
 
 .outline-dark {
     border: 1px solid $dark;
+}
+
+*/
+
+.navbar {
+    padding: 0.5rem;
 }
