--- a/_includes/item/breadcrumbs.html
+++ b/_includes/item/breadcrumbs.html
@@ -4,8 +4,8 @@
     By default the crumbs are: Home (index.html) / Items (browse.html) / current page title (from the metadata, truncated to 10 words max).
 
 {%- endcomment -%}
-<ol class="breadcrumb">
-    <li class="breadcrumb-item"><a class="text-dark" href="{{ '/' | relative_url }}">Home</a></li>
-    <li class="breadcrumb-item"><a class="text-dark" href="{{ '/browse.html' | relative_url }}">Items</a></li>
-    <li class="breadcrumb-item active text-dark" aria-current="page">{{ page.title | truncatewords: 10 }}</li>
+<ol class="breadcrumb bg-dark">
+    <li class="breadcrumb-item"><a class="text-light" href="{{ '/' | relative_url }}">Home</a></li>
+    <li class="breadcrumb-item"><a class="text-light" href="{{ '/browse.html' | relative_url }}">Items</a></li>
+    <li class="breadcrumb-item active text-light" aria-current="page">{{ page.title | truncatewords: 10 }}</li>
 </ol>
