--- a/_includes/head/head.html
+++ b/_includes/head/head.html
@@ -24,6 +24,8 @@
 {% if site.data.theme.map-cluster == true %}<link rel="stylesheet" href="{{ '/assets/lib/leaflet/MarkerCluster.css' | relative_url }}">
 <link rel="stylesheet" href="{{ '/assets/lib/leaflet/MarkerCluster.Default.css' | relative_url }}">{% endif %}{%- endif -%}
 <link rel="stylesheet" href="{{ '/assets/css/cb.css' | relative_url }}" type="text/css">
+<!-- Adobe Fonts -->
+<link rel="stylesheet" href="https://use.typekit.net/vzj0oul.css">
 
 {% comment %} 
     Meta tags and analytics are added during production build ONLY 
