--- a/_layouts/browse.html
+++ b/_layouts/browse.html
@@ -14,8 +14,8 @@ custom-foot: js/browse-js.html
         <form role="search" id="browseFilter" onsubmit="submitFilter(); return false;">
             <div class="input-group input-group">
                 <input type="text" class="form-control" id="filterTextBox" placeholder="Search by keyword" aria-label="Search"> 
-                <button class="btn btn-primary" type="submit" title="Filter items" id="filterButton" >Search</button>
-                <button class="btn btn-outline-dark filter" onclick="resetFilter(); return false;" data-filter="">Reset</button>
+                <button class="btn btn-success" type="submit" title="Filter items" id="filterButton" >Search</button>
+                <button class="btn btn-danger filter" onclick="resetFilter(); return false;" data-filter="">Reset</button>
             </div>
         </form>
     </div>
@@ -44,8 +44,8 @@ custom-foot: js/browse-js.html
 <div class="row mb-3 justify-content-center">
     <div class="col-md-12 text-end">
         <div class="btn-group" role="group" aria-label="Apply and Remove Filters">
-            <button class="btn btn-primary mx-0" type="button" onclick="applyFilters()">Apply Filters</button>
-            <button class="btn btn-outline-dark mx-0" type="button" onclick="removeFilters()">Remove Filters</button>
+            <button class="btn btn-success mx-0" type="button" onclick="applyFilters()">Apply Filters</button>
+            <button class="btn btn-danger mx-0" type="button" onclick="removeFilters()">Remove Filters</button>
         </div>
     </div>
 </div>
