--- a/_includes/item/rights-box.html
+++ b/_includes/item/rights-box.html
@@ -4,7 +4,7 @@
 
 {%- endcomment -%}
 <div class="card">
-    <div class="card-header">Rights</div>
+    <div class="card-header bg-primary text-dark">Rights</div>
     <div class="card-body">
         <dl>
             {% if page.rights %}<dt>Rights:</dt>
