--- a/_layouts/browse.html
+++ b/_layouts/browse.html
@@ -52,7 +52,7 @@ custom-foot: js/browse-js.html
 <div class="row mb-3 justify-content-center text-center"><div id="numberOf"></div></div>
 
 <div id="loadingIcon" class="text-center">
-    <div class="spinner-border text-dark" role="status"><span class="visually-hidden">Loading...</span></div>
+    <div class="spinner-border text-light" role="status"><span class="visually-hidden">Loading...</span></div>
 </div>
 
 <div class="row" id="browseItems"></div>
