--- a/_layouts/data.html
+++ b/_layouts/data.html
@@ -9,7 +9,7 @@ custom-foot: js/table-js.html
 {{ content }}
 
 <div class="table-responsive">
-    <table id="item-table" class="table table-striped">
+    <table id="item-table" class="table table-dark table-striped">
         <thead>
             <tr>
                 {% for f in fields %}
