remove header and footer from mirador page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,13 +4,15 @@
     {% include head/head.html %}
   </head>
   <body class="d-flex flex-column h-100">
+    {% unless page.permalink == "mirador.html" %}
     <div id="skip-to-content"><a href="#maincontent">Skip to main content</a></div>
     {% include collection-banner.html %}
     {% include collection-nav.html %}
+    {% endunless %}
     <main id="maincontent" role="main" class="flex-shrink-0">
       {{ content }}
     </main>
-    {% include footer.html %}
+    {% unless page.permalink == "mirador.html" %}{% include footer.html %}{% endunless %}
     {% include foot.html %}
     {% include scroll-to-top.html %}
   </body>
