--- a/_includes/js/browse-js.html
+++ b/_includes/js/browse-js.html
@@ -44,7 +44,7 @@ function makeCard(obj) {
     var imgAlt = obj.alt ? obj.alt : obj.title;
 
     // start card
-    var card = '<div class="item col-lg-3 col-md-4 mb-2 ' + obj.facets + '"><div class="card">';
+    var card = '<div class="item col-6 col-md-4 col-lg-3 mb-2 ' + obj.facets + '"><div class="card">';
     // top image for items with image
     if(imgSrc) {
         card += '<a href="' + itemHref + '"> <img class="card-img-top lazyload" src="' + placeholder + '" data-src="' + imgSrc + '" alt="' + imgAlt + '"></a>';
