create prototype mosaic visualization

--- a/_layouts/film.html
+++ b/_layouts/film.html
@@ -30,6 +30,7 @@ layout: default
         </div>
     </div>
 </div>
+{% include mosaic.html film=page.title %}
 <div class="row justify-content-center my-4">
     <div class="col-12 col-md-8">
         {{ content }}
