update film layout and mosaic include

--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -9,10 +9,10 @@ custom-foot: js/lunr-js.html
 <!-- Modal -->
 <div class="modal fade" id="operators" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
-        <div class="modal-content">
+        <div class="modal-content bg-dark">
             <div class="modal-header">
                 <h5 class="modal-title" id="modalLabel">Lunr Search Options</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                <button type="button" class="btn-close bg-light" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <p>These advanced options can be added to your query in the search box to refine your results:</p> 
@@ -39,7 +39,7 @@ custom-foot: js/lunr-js.html
         </div>
     </form>
     
-    <table id="lunrResults" class="table table-responsive"></table>
+    <table id="lunrResults" class="table table-responsive table-dark"></table>
 </div>
 
 <div class="mt-3">
