--- a/_includes/mosaic.html
+++ b/_includes/mosaic.html
@@ -1,9 +1,7 @@
 {% assign this-film = site.data[site.metadata] | where: "film", include.film %}
 
 <div class="mosaic text-center">
-{% for item in this-film %}
-    <span class="mosaic-tile"><a href="{{ '/items/' | append: item.objectid | append: '.html' | relative_url }}"><img src="{{ item.image_thumb }}"></a></span>
-{% endfor %}
+    {% for item in this-film %}<div class="mosaic-tile"><a href="{{ '/items/' | append: item.objectid | append: '.html' | relative_url }}"><img src="{{ item.image_thumb }}"></a></div>{% endfor %}
 </div>
 
 
@@ -11,15 +9,22 @@
 <style>
     .mosaic {
         width: 100%;
+        /* line-height: 10px; */
     }
+    .mosaic-tile {
+        display: inline-block;
+    }
+
     .mosaic-tile img {
-        width: 50px;
+        width: 20px;
         margin: 0;
+        padding: 0;
 
         transition: all .25s ease-in-out;
 
         &:hover {
-            transform: scale(3);
+            transform: scale(10);
+            /* width: 200px; */
         }
     }
 </style>
