--- a/_includes/item/breadcrumbs.html
+++ b/_includes/item/breadcrumbs.html
@@ -4,7 +4,7 @@
     By default the crumbs are: Home (index.html) / Items (browse.html) / current page title (from the metadata, truncated to 10 words max).
 
 {%- endcomment -%}
-<ol class="breadcrumb bg-dark">
+<ol class="breadcrumb bg-dark px-0">
     <li class="breadcrumb-item"><a class="text-light" href="{{ '/' | relative_url }}">Home</a></li>
     <li class="breadcrumb-item"><a class="text-light" href="{{ '/browse.html' | relative_url }}">Items</a></li>
     <li class="breadcrumb-item active text-light" aria-current="page">{{ page.title | truncatewords: 10 }}</li>
