--- a/_includes/item/browse-buttons.html
+++ b/_includes/item/browse-buttons.html
@@ -12,8 +12,8 @@
 </div>
 <div id="item-nav">
   <div class="d-none d-md-block">
-    <a class="previous btn btn-dark" href="{{ page.previous_item | relative_url }}">&laquo;</a>
-    <a class="next btn btn btn-dark" href="{{ page.next_item | relative_url }}">&raquo;</a>
+    <a class="previous btn btn-secondary" href="{{ page.previous_item | relative_url }}">&laquo;</a>
+    <a class="next btn btn btn-secondary" href="{{ page.next_item | relative_url }}">&raquo;</a>
   </div>
 </div>
 <script>
