--- a/_includes/mosaic.html
+++ b/_includes/mosaic.html
@@ -9,7 +9,7 @@
 <style>
     .mosaic {
         width: 100%;
-        font-size: 10px;
+        font-size: 15px;
     }
 
     .mosaic-tile {
@@ -18,7 +18,7 @@
         a {
 
             img {
-                width: 20px;
+                height: 15px;
                 margin: 0;
                 padding: 0;
                 /* transition: all .25s ease-in-out; */
@@ -28,7 +28,7 @@
                 background-color: #f6754f;
 
                 img {
-                    transform: scale(10) translateY(-7px);
+                    transform: scale(10) translateY(-10px);
                 }
             }
         }
