--- a/_layouts/film.html
+++ b/_layouts/film.html
@@ -4,7 +4,7 @@ layout: default
 ---
 <style>
 #film-banner {
-    background-image: url('{{ page.featured-image | relative_url }}');
+    background-image: url('{% assign check-path = page.featured-image | slice: 0 %}{% if check-path == "/" %}{{ page.featured-image | relative_url }}{% else %}{{ page.featured-image }}{% endif %}');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: {{ site.data.theme.home-banner-image-position | default: 'center' }};
@@ -25,7 +25,7 @@ layout: default
     <div id="film-banner" class="container-fluid mb-0 p-0 col-12">
         <div id="film-title-box" class="position-relative" >
             <div class="p-2 text-center text-light bg-black bg-opacity-75">
-                <h2 class="display-4 text-white">{{ page.title }}</h2>
+                <h2 class="display-4 text-white font-{{ page.name | slice: 0, 4 }}">{{ page.title }}</h2>
             </div>
         </div>
     </div>
