--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
-<footer class="bg-dark pt-4 mt-auto container-fluid">
+<footer class="bg-secondary pt-4 mt-auto container-fluid">
 
     <div class="row border-bottom border-white pb-4 mb-2">
 
-        <div class="col-md-7 px-4 mt-3">
+        <div class="col-md-9 px-4 mt-3">
 
             <h2 class="h4"><a href="{{ '/' | relative_url }}" class="text-white">{{ site.title }}</a></h2>
             <p class="text-white"><small>{{ site.description }}</small></p>
@@ -24,7 +24,7 @@
 
         </div>
 
-        <div class="col-md-5 mt-3 text-center">
+        <div class="col-md-3 mt-3 text-center">
 
            {% if site.organization-logo-nav %} <p class="text-md-end">
                 <a href="{{ site.organization-link }}">
