--- a/_includes/js/cloud-js.html
+++ b/_includes/js/cloud-js.html
@@ -56,9 +56,7 @@
         var i, size;
         var items = "";
         {% if include.shuffle == true %}shuffle(array);{% endif %}
-        var colors = [{% for c in site.data.config-theme-colors %}"{{ c.color_class }}"{% unless forloop.last %}, {% endunless %}{% endfor %}];
-        colors.pop();
-        colors.pop();
+        var colors = ["primary", "success", "info", "warning", "danger"];
         for (i = 0; i < array.length; i++) {
             size = mapSize(array[i][1]);
             var randomColor = colors[Math.floor(Math.random() * colors.length)];
