improve search behavior

--- a/_includes/js/browse-js.html
+++ b/_includes/js/browse-js.html
@@ -110,7 +110,7 @@ function filterItems(arr,q) {
         }
     }
     // add number 
-    document.querySelector("#numberOf").innerHTML = "Showing " + filteredItems.length + " of {{ items | size }} items";
+    document.querySelector("#numberOf").innerHTML = "Showing all " + filteredItems.length + " results";
     
     // add stuff, make cards first in giant var, then add all at once to speed things up
     var cards = "";
