--- a/_layouts/browse.html
+++ b/_layouts/browse.html
@@ -11,11 +11,11 @@ custom-foot: js/browse-js.html
 
 <div class="row mb-3 justify-content-center">
     <div class="col-md-12">
-        <form role="search" id="browseFilter" onsubmit="submitFilter(); return false;">
+        <form role="search" id="browseFilter" onsubmit="removeFilters(); submitFilter(); applyFilters(); return false;">
             <div class="input-group input-group">
                 <input type="text" class="form-control" id="filterTextBox" placeholder="Search by keyword" aria-label="Search"> 
-                <button class="btn btn-success" type="submit" title="Filter items" id="filterButton" >Search</button>
-                <button class="btn btn-danger filter" onclick="resetFilter(); return false;" data-filter="">Reset</button>
+                <button class="btn btn-success" type="submit" title="Filter items" id="filterButton">Search</button>
+                <button class="btn btn-danger filter" onclick="removeFilters(); resetFilter(); applyFilters(); return false;" data-filter="">Reset</button>
             </div>
         </form>
     </div>
@@ -43,7 +43,7 @@ custom-foot: js/browse-js.html
     <div class="col-12 col-lg-4 mb-1 text-end">
         <div class="btn-group mb-1" role="group" aria-label="Apply and Remove Filters">
             <button class="btn btn-success mx-0" type="button" onclick="applyFilters()">Apply Filters</button>
-            <button class="btn btn-danger mx-0" type="button" onclick="removeFilters()">Remove Filters</button>
+            <button class="btn btn-danger mx-0" type="button" onclick="removeFilters(); filterItems(items,query);">Remove Filters</button>
         </div>
         <div class="dropdown mb-1">
             <button class="btn btn-warning dropdown-toggle" type="button" id="browseSortButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -63,7 +63,7 @@ custom-foot: js/browse-js.html
     </div>
 </div>
 
-<div class="row mb-3 justify-content-center text-center"><div id="numberOf"></div></div>
+<div class="row mb-3 justify-content-center text-center"><div id="numberOf"></div>
 
 <div id="loadingIcon" class="text-center">
     <div class="spinner-border text-light" role="status"><span class="visually-hidden">Loading...</span></div>
