--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -101,7 +101,7 @@ body {
     Header
    -------- */
 
-#title h1, #home-title-box h1 {
+#site-title h1, #home-title-box h1 {
     font-family: "helvetica-lt-pro", sans-serif;
     font-weight: 700;
     font-style: normal;
