homepage, nav, logo, and color update

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
     <div class="row pb-3 mb-2">
 
         <div class="col-12 mt-3 text-center text-md-end">
-            <p class="text-white" id="footer-credits">
+            <p class="text-light" id="footer-credits">
                 <!--<small>Last updated {{ site.time | date: '%Y' }}.</small>-->
                 <small><em>Built with</em>
                     <a href="https://collectionbuilder.github.io/" title="CollectionBuilder">
