--- a/_includes/collection-banner.html
+++ b/_includes/collection-banner.html
@@ -1,7 +1,11 @@
 <div class="container">
     <div class="row align-items-center">
         <div id="site-title" class="{% if site.organization-logo-banner %}col-md-9{% else %}col-12{% endif %}">
-            <h1 class="mt-2"><a class="text-light" href="{{ site.baseurl }}/" >{{ site.title | replace: 'Annotated', '<span class="title-annotated">Annotated</span>' }}</a></h1>	 
+            
+            <!--<h1 class="col-12 my-3"><a class="text-light" href="{{ site.baseurl }}/" ><img src="{{ '/assets/img/pta-logo-bone.svg' | relative_url }}" alt="{{ site.title }}"></a></h1>-->
+            
+            <h1 class="col-8 col-md-6 col-lg-4 mt-2"><a class="text-light" href="{{ site.baseurl }}/" ><img src="{{ '/assets/img/pta-logo-small-bone.svg' | relative_url }}" alt="Paul Thomas Annotated"></a></h1>	 
+            
             {% if site.tagline %}<p>{{ site.tagline }}</p>{% endif %}
         </div>
         {% if site.organization-logo-banner %}
