--- a/_includes/item/metadata.html
+++ b/_includes/item/metadata.html
@@ -17,6 +17,9 @@
             {% endfor %}
             {% elsif f.external_link == "true" %}
             <a href="{{ page[f.field] }}">{{ page[f.field] }}</a>
+            {% elsif f.field == "film" %}
+            {% assign this-film = site.data.config-films | where: 'full_name', page[f.field] | first %}
+            <a href="{{ this-film.code | downcase | append: '.html' | relative_url }}">{{ page[f.field] }}</a>
             {% else %}
             {{ page[f.field] | replace: '""','"' }}{% endif %}
         </dd>
