--- a/_layouts/film.html
+++ b/_layouts/film.html
@@ -25,7 +25,7 @@ layout: default
     <div id="film-banner" class="container-fluid mb-0 p-0 col-12">
         <div id="film-title-box" class="position-relative" >
             <div class="p-2 text-center text-light bg-black bg-opacity-75">
-                <h2 class="display-4 text-white font-{{ page.name | slice: 0, 4 }}">{{ page.title }}</h2>
+                <h2 class="display-4 text-light font-{{ page.name | slice: 0, 4 }}">{{ page.title }}</h2>
             </div>
         </div>
     </div>
