improve mirador responsiveness, show item title on hover, and fix rights card bg color

--- a/_includes/item/iiif-manifest-mirador.html
+++ b/_includes/item/iiif-manifest-mirador.html
@@ -5,4 +5,6 @@
 
 {% endcomment %}
 
-<iframe width="100%" height="650" src="{{ '/mirador' | relative_url }}#{{ page.object_location }}"></iframe>
+<div class="mirador-container">
+    <iframe src="{{ '/mirador' | relative_url }}#{{ page.object_location }}"></iframe>
+</div>
