--- a/_includes/item/rights-box.html
+++ b/_includes/item/rights-box.html
@@ -5,7 +5,7 @@
 {%- endcomment -%}
 <div class="card">
     <div class="card-header bg-primary text-dark">Rights</div>
-    <div class="card-body">
+    <div class="card-body bg-secondary">
         <dl>
             {% if page.rights %}<dt>Rights:</dt>
             <dd>{{ page.rights }}</dd>{% endif %}
