--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -64,10 +64,26 @@ body {
 
 .item {
     transition: all 0.3s ease-in-out;
+
+    .card-title-container {
+        position: relative;
+        top: -50px;
+        height: 0px;
+        display: none;
+
+        a {
+            color: $light !important;
+            text-shadow: 1px 1px 3px #000000;
+        }
+    }
 }
 
 .item:hover {
-    transform: scale(1.1);
+    /* transform: scale(1.1); */
+
+    .card-title-container {
+        display: block;
+    }
 }
 
 .pagination {
@@ -205,3 +221,30 @@ body {
         box-shadow: 0 0 0 .25rem $focused-glow;
     }
 }
+
+/* ------------------------------
+    Responsive Mirador Container
+   ------------------------------ */
+
+    .mirador-container {
+        position: relative;
+        overflow: hidden;
+        width: 100%;
+        padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+
+        iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            right: 0;
+            width: 100%;
+            height: 100%;
+        }
+    }
+
+    @media only screen and (max-width: 576px) {
+        .mirador-container {
+            padding-top: 100%; /* 1:1 Aspect Ratio */
+        }
+    }
